FINERACT-2173: Use DatatableReadService